test/orig/01-syntax/inv_level/inv_level.expected
File "inv_level.ml", line 1, characters 15-19:
1 | let () = [%LOG [%X] "start"]
                   ^^^^
Error: invalid log level: X
